<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RaceYourselfGearEdition</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ConnectionEstablishedMsg">Phone to gear comms open</string>
    <string name="title_activity_popup">RaceYourself Gear Edition</string>
    <string name="notification_title">Race Yourself</string>
    <string name="notification_message">Tethered to Gear</string>
    <string name="splash_content">Race Yourself</string>
    <string name="header_content">Race Yourself Gear Edition</string>
    
    <string name="howto">How to play</string>
    <string name="connected">Connected</string>
    <string name="connect">Not connected\ntap to connect</string>
    <string name="service_starting">Service starting</string>
    <string name="feedback">Feedback</string>
    
    <string name="footer">© copyright raceyourself inc 2014</string>
    <string name="app_id">625999614089605</string>
</resources>