<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".PopupActivity">

     <ImageView
        android:id = "@+id/imageview1" 
        android:contentDescription="@string/header_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/header"
		android:scaleType = "centerCrop" />
 
     <ImageView
        android:id = "@+id/imageview2" 
        android:contentDescription="@string/header_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
		android:layout_below="@+id/imageview1"
        android:src="@drawable/mainimage"
		android:scaleType = "centerCrop" />
 
    <TextView
        android:id = "@+id/textview1" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight = "80sp"
        android:paddingLeft = "50dp"
        android:gravity="left|center"
        android:background="@drawable/button"
        android:textColor="#000"
        android:textSize="20sp"
		android:layout_below="@+id/imageview2"
		android:clickable="true"
		android:onClick="onConnectionClick"
		android:textStyle="bold"
        android:text="@string/service_starting" />
    
     <TextView
        android:id = "@+id/textview2" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight = "80sp"
        android:paddingLeft = "50dp"
        android:gravity="left|center"
        android:background="@drawable/button"
        android:textColor="#000"
        android:textSize="20sp"
		android:layout_below="@+id/textview1"
		android:clickable="true"
		android:onClick="onHowtoClick"
        android:text="@string/howto" />
    
    <TextView
        android:id = "@+id/textview3" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight = "80sp"
        android:paddingLeft = "50dp"
        android:gravity="left|center"
        android:background="@drawable/button"
        android:textColor="#000"
        android:textSize="20sp"
		android:layout_below="@+id/textview2"
		android:clickable="true"
		android:onClick="onFeedbackClick"
        android:text="@string/feedback" />
    
    <TextView
        android:id = "@+id/textview4" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft = "20dp"
        android:paddingBottom = "20dp"
        android:gravity="left|bottom"
        android:background="@drawable/background"
        android:textColor="#000"
        android:textSize="12sp"
		android:layout_below="@+id/textview3"
        android:text="@string/footer" />
    
</RelativeLayout>